fixed a couple bad links

--- a/puppet.docset/Contents/Resources/Documents/configuration.html
+++ b/puppet.docset/Contents/Resources/Documents/configuration.html
@@ -42,7 +42,7 @@ group = puppet, mode = 644 }</code></li>
 their function.</li>
 </ul>
 
-<p>See the <a rel="external" "http://docs.puppetlabs.com/guides/configuring.html">configuration guide</a> for more details.</p>
+<p>See the <a rel="external" href="http://docs.puppetlabs.com/guides/configuring.html">configuration guide</a> for more details.</p>
 
 <hr />
 
