--- a/puppet.docset/Contents/Resources/Documents/function.html
+++ b/puppet.docset/Contents/Resources/Documents/function.html
@@ -300,7 +300,7 @@ the generator.</p>
 
 <h2 id="inlinetemplate">inline_template</h2>
 <p>Evaluate a template string and return its value.  See 
-<a href="http://docs.puppetlabs.com/guides/templating.html">the templating docs</a> for 
+<a rel="external" href="http://docs.puppetlabs.com/guides/templating.html">the templating docs</a> for 
 more information.  Note that if multiple template strings are specified, their 
 output is all concatenated and returned as the output of the function.</p>
 
@@ -490,7 +490,7 @@ the function to return true.</p>
 
 <h2 id="template">template</h2>
 <p>Evaluate a template and return its value.  See
-<a href="http://docs.puppetlabs.com/guides/templating.html">the templating docs</a> for 
+<a rel="external" href="http://docs.puppetlabs.com/guides/templating.html">the templating docs</a> for 
 more information.</p>
 
 <p>Note that if multiple templates are specified, their output is all
