--- a/puppet.docset/Contents/Resources/Documents/indirection.html
+++ b/puppet.docset/Contents/Resources/Documents/indirection.html
@@ -247,10 +247,10 @@ A node is composed of its name, its facts, and its environment.</p>
   <dd></dd>
   <dt>exec</dt>
   <dd>Call an external program to get node information.  See
-the <a href="http://docs.puppetlabs.com/guides/external_nodes.html">External Nodes</a> page for more information.</dd>
+the <a rel="external" href="http://docs.puppetlabs.com/guides/external_nodes.html">External Nodes</a> page for more information.</dd>
   <dt>ldap</dt>
   <dd>Search in LDAP for node configuration information.  See
-the <a href="http://projects.puppetlabs.com/projects/puppet/wiki/Ldap_Nodes">LDAP Nodes</a> page for more information.  This will first
+the <a rel="external" href="http://projects.puppetlabs.com/projects/puppet/wiki/Ldap_Nodes">LDAP Nodes</a> page for more information.  This will first
 search for whatever the certificate name is, then (if that name
 contains a <code>.</code>) for the short name, then <code>default</code>.</dd>
   <dt>memory</dt>
