--- a/puppet.docset/Contents/Resources/Documents/metaparameter.html
+++ b/puppet.docset/Contents/Resources/Documents/metaparameter.html
@@ -73,7 +73,7 @@ file { 'sshdconfig':
 <p>There&#8217;s no way here for the Puppet parser to know that these two stanzas
 should be affecting the same file.</p>
 
-<p>See the <a rel="external" "http://docs.puppetlabs.com/guides/language_guide.html">Language Guide</a> for more information.</p>
+<p>See the <a rel="external" href="http://docs.puppetlabs.com/guides/language_guide.html">Language Guide</a> for more information.</p>
 
 <h3 id="audit">audit</h3>
 
