--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>Dash-puppet-docset by jsipprell</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Dash-puppet-docset</h1>
+        <p class="header">Dash docset for puppet (2.7.21 only at the moment)</p>
 
-    <header>
-      <div class="container">
-        <h1>Dash-puppet-docset</h1>
-        <h2>Dash docset for puppet (2.7.21 only at the moment)</h2>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/jsipprell/dash-puppet-docset/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/jsipprell/dash-puppet-docset/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/jsipprell/dash-puppet-docset">View On GitHub</a></li>
+        </ul>
 
-        <section id="downloads">
-          <a href="https://github.com/jsipprell/dash-puppet-docset/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/jsipprell/dash-puppet-docset/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/jsipprell/dash-puppet-docset" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jsipprell">jsipprell</a></p>
 
-    <div class="container">
-      <section id="main_content">
+
+      </header>
+      <section>
         <h1>dash-puppet-docset</h1>
 
 <p>Dash docset for puppet (2.7.21 only at the moment)</p>
@@ -70,8 +72,11 @@ is some fashion so that it can generate a docset.</li>
 <li>Figure out how to provide nested references ala some of the other docsets (Python, Apple, etc)</li>
 </ul>
       </section>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
