--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a class="buttons github" href="https://github.com/jsipprell/dash-puppet-docset">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jsipprell">jsipprell</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="http://jsipprell.github.io/">jsipprell</a></p>
 
 
       </header>
@@ -72,7 +72,7 @@ is some fashion so that it can generate a docset.</li>
 <li>Figure out how to provide nested references ala some of the other docsets (Python, Apple, etc)</li>
 </ul>
       </section>
-      <footer>
+      <footer id="footer">
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
