--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ is some fashion so that it can generate a docset.</li>
 <li>Figure out how to provide nested references ala some of the other docsets (Python, Apple, etc)</li>
 </ul>
       </section>
-      <footer class="hidden">
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      <footer>
+        <p class="footer"><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
