and more tweaking

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@ is some fashion so that it can generate a docset.</li>
 </ul>
       </section>
       <footer>
-        <p class="hidden"><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <div class="hidden">
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        </div>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
