Revert "and more tweaking" Revert "typo" Revert "more tweaking" Revert "css touch-ups" Revert "Update styles.css" Revert "Update index.html"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a class="buttons github" href="https://github.com/jsipprell/dash-puppet-docset">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="http://jsipprell.github.io/">jsipprell</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jsipprell">jsipprell</a></p>
 
 
       </header>
@@ -73,9 +73,7 @@ is some fashion so that it can generate a docset.</li>
 </ul>
       </section>
       <footer>
-        <div class="hidden">
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-        </div>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
