--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="stylesheets/addl.css">
   </head>
   <body>
     <div class="wrapper">
